<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.example.codingchallenge.model.data.User" />
    </data>

    <LinearLayout
        android:id="@+id/llUserDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_16">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_8"
            android:contentDescription="@string/user_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image_placeholder"
            app:civ_border_color="@color/black"
            app:civ_border_width="@dimen/dp_1" />

        <TextView
            android:id="@+id/userNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/name_label"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="UserName" />

        <TextView
            android:id="@+id/userGenderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center_horizontal"
            android:text="@string/gender_label"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/userGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="Male" />

        <TextView
            android:id="@+id/userDobLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center_horizontal"
            android:text="@string/dob_label"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/userDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="hello@gmail.com" />

        <TextView
            android:id="@+id/userEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center_horizontal"
            android:text="@string/email_label"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="hello@gmail.com" />


        <TextView
            android:id="@+id/userPhoneLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center_horizontal"
            android:text="@string/phone_label"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="1234556676" />

        <TextView
            android:id="@+id/userAddressLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center_horizontal"
            android:text="@string/address_label"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/userAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="address " />


    </LinearLayout>
</layout>
