<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.codingchallenge.viewmodel.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout">


        <!-- SwipeRefreshLayout -->
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/swipeRefreshLayout"
            app:refreshing="@{viewModel.isRefreshing}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userSearchView"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_36"
                    android:layout_margin="@dimen/dp_16"
                    android:autofillHints="@string/search_user"
                    android:background="@drawable/search_box"
                    android:drawableEnd="@drawable/ic_search"
                    android:hint="@string/search_user"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingHorizontal="@dimen/dp_4"
                    android:singleLine="true"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toStartOf="@id/ivListCount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivListCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:paddingTop="@dimen/dp_8"
                    android:src="@drawable/ic_list_sort"
                    app:layout_constraintBottom_toTopOf="@id/userRecyclerView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- RecyclerView for the user list -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/userRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    app:layout_constraintTop_toBottomOf="@id/userSearchView" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
