<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clListCount"
    android:padding="@dimen/dp_8">


    <EditText
        android:id="@+id/etAddCount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_16"
        android:autofillHints="@string/enter_list_count"
        android:background="@drawable/search_box"
        android:gravity="center"
        android:hint="@string/enter_list_count"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnFetchList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/rounded_corner_view"
        android:backgroundTint="@color/purple_500"
        android:text="@string/fetch"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etAddCount" />
</androidx.constraintlayout.widget.ConstraintLayout>